k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"


spec:
  rules:
    - host: yum.goorm.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-backend
                port:
                  number: 80
